# controller/trip.go
@@ -129,3 +129,83 @@ func (p *Controller) SearchTrip(c *gin.Context) {
 	c.JSON(http.StatusOK, res)
 
 }
+
+// CreateTripPlan godoc
+
+// @BasePath				/v01
+// @Summary					지갑계정, 제목, 나라, 출발날짜, 도착날짜 등을 입력합니다. days는 아이템을 담은 배열입니다.
+// @Tags					CreateTripPlan(나의 여행계획표 생성하기)
+// @Description				days에는 day1, day2단위로 아이템이 있고 각 day1별로 시간과 imtes가 있으며 각각 여행시작시간, 종료시간, 이미지, 타이틀, 설명, 메모등을 입력할 수 있습니다.
+// @Accept					json
+// @Produce					json
+// @Param					walletAccount			path	string 		true	"walletAccount",
+// @Param					travelTitle				path	string	 	true	"travelTitle",
+// @Param					tripCountry				path	string		true	"tripCountry",
+// @Param					tripDeparture			path	string		true	"tripDeparture",
+// @Param					tripArrival				path	string		true	"tripArrival"
+// @Param					days					path	string 		true	"days"
+// @Router					/v01/trip/simpleplan	[post]
+// @Success					200	{array} model.TripPlan
+func (p *Controller) CreateSimpleTripPlan(c *gin.Context) {
+
+	if err := c.ShouldBindJSON(&tripPlan); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	fmt.Println("tripPlan", tripPlan)
+	now := time.Now()
+	custom := now.Format("2006-01-02 15:04:05")
+
+	tripPlan.TripDeparture = custom
+	tripPlan.TripArrival = custom
+	fmt.Println("before res")
+	res := p.md.InsertTripPlan(&tripPlan)
+	fmt.Println("after res")
+	if res != nil {
+		c.JSON(http.StatusOK, res)
+	} else {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Empty TripPlan"})
+	}
+
+}
+
+// PatchTripPlan godoc
+
+// @BasePath				/v01
+// @Summary					지갑계정, 제목, 나라, 출발날짜, 도착날짜 등을 입력합니다. days를 입력으로 받는 함수 이후 데이터를 추가한다.
+// @Tags					CreateTripPlan(나의 여행계획표 생성하기)
+// @Description				days에는 day1, day2단위로 아이템이 있고 각 day1별로 시간과 imtes가 있으며 각각 여행시작시간, 종료시간, 이미지, 타이틀, 설명, 메모등을 입력할 수 있습니다.
+// @Accept					json
+// @Produce					json
+// @Param					walletAccount			path	string 		true	"walletAccount",
+// @Param					travelTitle				path	string	 	true	"travelTitle",
+// @Param					tripCountry				path	string		true	"tripCountry",
+// @Param					tripDeparture			path	string		true	"tripDeparture",
+// @Param					tripArrival				path	string		true	"tripArrival"
+// @Param					days					path	string 		true	"days"
+// @Router					/v01/trip/simpleplan	[patch]
+// @Success					200	{array} model.TripPlan
+func (p *Controller) PatchSimpleTripPlan(c *gin.Context) {
+
+	if err := c.ShouldBindJSON(&tripPlan); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	fmt.Println("tripPlan", tripPlan)
+	now := time.Now()
+	custom := now.Format("2006-01-02 15:04:05")
+
+	tripPlan.TripDeparture = custom
+	tripPlan.TripArrival = custom
+	fmt.Println("before res")
+	res := p.md.InsertTripPlan(&tripPlan)
+	fmt.Println("after res")
+	if res != nil {
+		c.JSON(http.StatusOK, res)
+	} else {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Empty TripPlan"})
+	}
+
+}
